--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "build:dev": "npm run build -- --watch --mode=development",
+    "start:dev": "nodemon server --ignore dist/ --ignore src/",
+    "start": "node server"
 	},
 	"repository": {
 		"type": "git",
@@ -20,8 +24,6 @@
 		"axios": "^0.21.1",
 		"express": "^4.17.1",
 		"pg": "^8.5.1",
-		"react": "^17.0.1",
-		"react-redux": "^7.2.2",
 		"sequelize": "^6.5.0"
 	},
 	"devDependencies": {
@@ -30,6 +32,14 @@
 		"@babel/register": "^7.13.8",
 		"babel-loader": "^8.2.2",
 		"nodemon": "^2.0.7",
-		"webpack": "^5.24.3"
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^5.2.0",
+		"redux": "^4.0.5",
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.3.0",
+		"webpack": "^5.24.3",
+		"webpack-cli": "^4.5.0"
 	}
 }
