--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "build:dev": "npm run build -- --watch --mode=development",
-    "start:dev": "npm run build:dev & npm run start-server",
+		"build:dev": "npm run build -- --watch --mode=development",
+    "start:devForme": "nodemon server --ignore dist/ --ignore src/",
     "start": "node server"
 	},
 	"repository": {
