--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
 		"build:dev": "npm run build -- --watch --mode=development",
-    "start:devForme": "nodemon server --ignore dist/ --ignore src/",
+		"start:dev": "npm run build:dev & npm run start",
+    "start:devForMe": "nodemon server --ignore dist/ --ignore src/",
     "start": "node server"
 	},
 	"repository": {
