--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "build:dev": "npm run build -- --watch --mode=development",
-    "start:dev": "npm run build:dev & npm run start-server",
-    "start": "node server"
+		"build": "webpack",
+		"build:dev": "npm run build -- --watch --mode=development",
+		"start:dev": "npm run build:dev & npm run start",
+		"start": "node server"
 	},
 	"repository": {
 		"type": "git",
