--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"axios": "^0.21.1",
 		"express": "^4.17.1",
 		"pg": "^8.5.1",
+		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.5.0"
 	},
 	"devDependencies": {
