--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"express": "^4.17.1",
+		"google-maps-react": "^2.0.6",
 		"pg": "^8.5.1",
 		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.5.0"
