--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack",
 		"build:dev": "npm run build -- --watch --mode=development",
+		"start:dev:logger": "LOGGING=true npm run start:dev",
 		"start:dev": "npm run build:dev & npm run start",
 		"start:devForMe": "nodemon server --ignore dist/ --ignore src/",
 		"start": "node server"
