--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"bcrypt": "^5.0.1",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"faker": "^5.4.0",
 		"jsonwebtoken": "^8.5.1",
