--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"build": "webpack",
 		"build:dev": "npm run build -- --watch --mode=development",
 		"start:dev:logger": "LOGGING=true npm run start:dev",
+		"start:dev:seed": "SEED=true npm run start:dev",
 		"start:dev": "npm run build:dev & npm run start",
 		"start:devForPC": "nodemon server --ignore dist/ --ignore src/",
 		"start:devForPC:logger": "set LOGGING=true && nodemon server --ignore dist/ --ignore src/",
+		"start:devForPC:seed": "set SEED=true && nodemon server --ignore dist/ --ignore src/",
 		"start": "node server"
 	},
 	"repository": {
