--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"faker": "^5.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.5.1",
+		"react-google-maps": "^9.4.5",
 		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.5.0"
 	},
