--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT=helloword
-API_TOKEN = '49zH6hsPdt4lqmDwRRaoAvIfH'
+COURT_API = '49zH6hsPdt4lqmDwRRaoAvIfH'
 MAP_API = 'AIzaSyCFzP7I4cuVp_WwRX3q4kuprLcjwDYywhI'
