--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"express": "^4.17.1",
 		"faker": "^5.4.0",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.1",
 		"pg": "^8.5.1",
 		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.5.0"
@@ -41,6 +42,7 @@
 		"@babel/preset-react": "^7.12.13",
 		"@babel/register": "^7.13.8",
 		"babel-loader": "^8.2.2",
+		"moment-locales-webpack-plugin": "^1.2.0",
 		"nodemon": "^2.0.7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
