--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
 		"express": "^4.17.1",
 		"faker": "^5.4.0",
 		"jsonwebtoken": "^8.5.1",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
 		"pg": "^8.5.1",
 		"react-google-maps": "^9.4.5",
 		"redux-devtools-extension": "^2.13.9",
