--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "webpack",
 		"build:dev": "npm run build -- --watch --mode=development",
+		"start:dev:logger": "LOGGING=true npm run start:dev",
 		"start:dev": "npm run build:dev & npm run start",
 		"start:devForMe": "nodemon server --ignore dist/ --ignore src/",
 		"start": "node server"
@@ -22,9 +23,11 @@
 	},
 	"homepage": "https://github.com/Cat-Stone/pick-me-up#readme",
 	"dependencies": {
+		"@material-ui/core": "^4.11.3",
 		"axios": "^0.21.1",
 		"bcrypt": "^5.0.1",
 		"express": "^4.17.1",
+		"faker": "^5.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.5.1",
 		"redux-devtools-extension": "^2.13.9",
@@ -35,6 +38,7 @@
 		"@babel/preset-react": "^7.12.13",
 		"@babel/register": "^7.13.8",
 		"babel-loader": "^8.2.2",
+		"css-loader": "^5.1.3",
 		"nodemon": "^2.0.7",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
@@ -43,6 +47,7 @@
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.3.0",
+		"style-loader": "^2.0.0",
 		"webpack": "^5.24.3",
 		"webpack-cli": "^4.5.0"
 	}
