--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"passport-local": "^1.0.0",
 		"pg": "^8.5.1",
 		"react-google-maps": "^9.4.5",
+		"react-icons": "^4.2.0",
 		"redux-devtools-extension": "^2.13.9",
 		"sequelize": "^6.5.0"
 	},
