--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@material-ui/core": "^4.11.3",
 		"axios": "^0.21.1",
 		"bcrypt": "^5.0.1",
+		"caniuse-lite": "^1.0.30001446",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^7.0.2",
 		"express": "^4.17.1",
@@ -63,5 +64,8 @@
 		"style-loader": "^2.0.0",
 		"webpack": "^5.27.2",
 		"webpack-cli": "^4.5.0"
+	},
+	"engines" : { 
+	  "node" : ">=16.0.0 <17.0.0" 
 	}
 }
